# endfield-trade

./: .gitignore  EndfieldTrade.spec  config.py  core_logic.py  main.py  main_ui.py  pyproject.toml  recognizers.py  run.py  utils.py
.github/workflows/: release.yml
src/: core_logic.py  main.py  ocr_rapid.py  ocr_wx.py  utils.py
